# cloudflare-cli

./: .env.example  .gitignore  LICENSE  README.md  cli.py  cloudflare_service.py  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
cloudflare_cli/: __init__.py  cli.py  cloudflare_service.py
